# Mochi-Logic

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  storage.py
app/api/routers/: __init__.py  auth.py  consents.py  conversations.py  couple.py  escalations.py  messages.py  partners.py
app/models/: __init__.py  entities.py
app/services/: auth.py  escalation.py  insights.py  llm_orchestrator.py  rag.py  screening.py
backend/: pyproject.toml
backend/app/: storage.py
backend/app/api/routers/: insights.py  risk_events.py  screenings.py  summaries.py
backend/app/audit/: logger.py
backend/app/policy/: redaction.py  validator.py
backend/app/services/: consent.py  conversation.py  partner_link.py  risk_engine.py
backend/chatkit_starter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: INTEGRATION.md
docs/: PLAN.md  PRD.md  PROBLEM.md  README.md  SOLUTION.md  TODO.md  openapi.yaml
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthScreen.css  AuthScreen.jsx  Button.css  Button.jsx  Card.css  Card.jsx  ConsentModal.css  ConsentModal.jsx  EPDSScreen.css  EPDSScreen.jsx  GroupChat.css  GroupChat.jsx  PrivateChat.css  PrivateChat.jsx  TypingIndicator.css  TypingIndicator.jsx
frontend/src/utils/: aiResponses.js  epdsLogic.js  groupChatScript.js  tts.js
migrations/: 001_initial.sql
