[project]
name = "chatkit-starter-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for the self-hosted ChatKit starter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114,<0.116",
    "uvicorn[standard]>=0.36,<0.37",
    "openai>=1.40",
    "openai-chatkit>=1.4.0,<2",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary,pool]>=3.1",
    "alembic>=1.13",
    "pgvector~=0.2.5",
    "aiosqlite>=0.19",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4,<0.7",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
